# IGI2001

./: .gitignore  Makefile
TP2/: adresses.csv  adresses.tex  ex2  ex2.c  exo1  exo1.c  exo2  exo2-2  exo2-2.c  exo2.c  exo3  exo3.c  rapport.tex  types.csv  types.tex
TP3/: exo1  exo1-2  exo1-2.c  exo1.c  exo2  exo2.c  rapport.txt
TP4/: Makefile  exo1  exo1.c  exo2  exo2.c  exo3  exo3-bis  exo3-bis.c  exo3.c
TP5/: Makefile  exo1  exo1.c  exo2  exo2.c  exo3  exo3.c  exo4  exo4.c  out1  out2  out4  rapport.tex
TP6/: Makefile  exo1  exo1.c  exo2  exo2.c  exo3  exo3.c  exo4  exo4.c  out1  out2  out3  rapport.tex
TP7/: Makefile  exo1.c  exo2.c  exo3.c  exo4.c  rapport.tex
TP7/rle/: 104P77.rle  112P51_glider_synthesis.rle  boatstretcher.rle  electric_fence.rle  extended_112P51.rle  p246_glider_shuttle.rle  pi_orbital_alternative.rle  queen.rle  vacuum_gun.rle  wickstretcher.rle
TP8/: Makefile  exo1.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c  exo7.c  exo8.c
TP8/lib/: utils.c  utils.h
TP8/pics/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  pendu
hangman2/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac
hangman2/doc/: Makefile  Makefile.am  rapport.tex  report.tex
hangman2/src/: Makefile.am  hangman2.c
hangman2/src/lib/: utils.c
hangman2/src/pics/: 10.txt  3.txt  9.txt
hangman2/src/utils/: dict.c  dict.h  inc.h  pics.c  pics.h  words.c  words.h
