AC_INIT([Hangman2], [1.0], [remi.nicole@edu.esiee.fr])
AM_INIT_AUTOMAKE([-Wall -Werror gnits])

AC_PROG_CC_C99

AC_CONFIG_HEADER([config.h])
AC_CHECK_HEADERS([stdlib.h string.h sysexits.h sys/stat.h unistd.h])
AC_CHECK_HEADER_STDBOOL

AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])

AC_OUTPUT
